--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 sudo: required
+language: generic
 services:
   - docker
 
   before_install:
-  - docker build -t husan/docker-react -f Dockerfile.dev
+  - docker build -t husan/docker-react -f Dockerfile.dev .
 
   script:
   - docker run -e CI=true husan/docker-react npm run test -- -- coverage 
